@@ -3,6 +3,7 @@
 - limit n_thr on tiny images
 - don't exit() on memleak detected, just warn
 - add "autocrop" option to openslide load
+- argh fix affine, again
 
 4/7/14 started 7.40.4
 - fix vips_rawsave_fd(), thanks aferrero2707 
